yes/no -> yes|no, marco processing, intro.txt

--- a/bin/setup/lang/lexicon.txt
+++ b/bin/setup/lang/lexicon.txt
@@ -75,6 +75,39 @@ lv: Yes|Nç
 nl: ja|nee
 sv: Yes|No
 
+    Welcome to GeneWeb %q
+de: Willkommen zu GeneWeb %q
+en: Welcome to GeneWeb %q
+es: Bienvenido a GeneWeb %q
+fr: Bienvenue dans GeneWeb %q
+it: Benvenuti su GeneWeb %q
+lv: Sveicinaati GeneWeb %q Ghenealoghijas datu baazee
+sv: Välkommen till GeneWeb %q
+
+    Go to your Web browser and open one of the following addresses:
+de: Nimm deinen Webbrowser und öffne eine der folgenden Adressen:
+en: Go to your Web browser and open one of the following addresses:
+fr: Allez dans votre navigateur Web et ouvrez une des adresses suivantes:
+it: Lanciate il vostro navigatore Web e aprite uno dei seguenti indirizzi:
+
+
+    Warning: for this program to work, you must not close this window!
+de: Warnung: Damit dieses Programm funktioniert, darfst Du dieses  Fenster nicht schließen!
+en: Warning: for this program to work, you must not close this window!
+fr: Attention: pour que cela fonctionne, vous ne devez pas fermer cette fenetre!
+it: Attenzione! Per poter navigare nella base, non dovete mai chiudere questa finestra!
+lv: Uzmaniibu: lai shii programma darbotos Juus nedriigstat aizveert sho logu!
+sv: Varning: för att det här programmet ska fungera, får du inte stänga detta fönster!
+
+    If none of theses addresses work, you may have to configure, in your browser, options like "work off-line" or "do not use the proxy for local addresses" or "do not connect to Internet for the address 'localhost'".
+de: Falls das nicht funktioniert, mußt du eventuell in deinem Webbrowser einige Optionen ändern, wie zum Beispiel "Offline arbeiten" oder "Für lokale Adressen keinen Proxy benutzen" oder "Für die Adresse 'localhost' nicht mit dem Internet verbinden".
+en: If none of theses addresses work, you may have to configure, in your browser, options like "work off-line" or "do not use the proxy for local addresses" or "do not connect to Internet for the address 'localhost'".
+es: Si esto no funciona, es posible que Ud. haya configurado en su explorador algunas opciones de tipo "trabajar fuera de conección" o "no utilizar un proxy con las direcciones locales" o "no conectarse al internet con la dirección 'localhost'".
+fr: Si aucune de ces adresses ne fonctionne, il se peut que vous ayez à configurer dans votre navigateur des options du genre "travailler hors connexion" ou "ne pas utiliser de proxy pour les adresses locales" ou "ne pas se connecter sur internet pour l'adresse 'localhost'".
+it: Se nessuno dei due indirizzi funziona, forse è a causa del fatto che avete configurato nel vostro navigatore un'opzione del genere "lavorare off-line" oppure "non utilizzare il proxy per gli indirizzi locali" o "non collegarsi ad internet per l'indirizzo "localhost".
+lv: Ja pie iepriekshmineetajiem nosaciijumiem Juus nevariet pieklhuut pie GeneWeb, Jums iespeejams jaaiestaada savaa Interneta caurluukprogramaa sekojoýi noraadiijumi: "work off-line" vai "do not use the proxy for local addresses" vai "do not connect to Internet for the address 'localhost'". 
+sv: Om det inte fungerar, kanske du måste ställa in din webbläsare med optioner som "arbeta off-line" eller "använd inte en proxyserver för lokala adresser" eller "anslut inte till Internet för adressen 'localhost'".
+
     "Friends" can see all dates, notes and photos of the persons born since less than one century. The ones who have not entered the below password will not see these informations.
 aa: gwf_1.htm
 de: "Freunde" können alle Daten, Notizen und Fotos von Personen sehen, die vor weniger als einem Jahrhundert geboren wurden. Wer dieses Kennwort nicht eingegeben hat, kann diese Informationen nicht abrufen.
