--- a/bin/setup/lang/intro.txt
+++ b/bin/setup/lang/intro.txt
@@ -1,5 +1,5 @@
 
-[Welcome to GeneWeb %q]
+[Welcome to GeneWeb] %q
 
 [Go to your Web browser and open one of the following addresses:]
        http://127.0.0.1:%z/
